--- a/frontend/src/resources/themes/mover-old/styles/index.scss
+++ b/frontend/src/resources/themes/mover-old/styles/index.scss
@@ -54,13 +54,13 @@ page-tab-nav
 {
 
     /// The width of the border of the component.
-    --tab-nav-border-width: var(--border-width-medium);
+    --tab-nav-border-width: var(--border-width-thin);
 
     /// The radius of the border of the component.
     --tab-nav-border-radius: var(--border-radius-medium);
 
     /// The color of the border of the component.
-    --tab-nav-border-color: var(--surface-neutral-surface-color);
+    --tab-nav-border-color: var(--palette-color-neutral);;
 }
 
 body
